--- a/src/VisionFlow/VisionFlow.css
+++ b/src/VisionFlow/VisionFlow.css
@@ -1,7 +1,7 @@
 /* Main scroll container */
 .vision-flow {
   width: 100vw;
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 
   overflow-y: auto;
   overflow-x: hidden;
@@ -12,13 +12,13 @@
 
 /* Make Vision take full screen */
 .vision-page {
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   width: 100%;
 }
 
 /* Make Projects flow naturally */
 .projects-page {
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   width: 100%;
 }
 
