--- a/src/Hero/Herointro.css
+++ b/src/Hero/Herointro.css
@@ -5,7 +5,7 @@
   position: relative;
   inset: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   font-family: "Poppins", sans-serif;
   z-index: 0;
   background: black;
